Fixed Resume Page
Using the default browser viewer is good enough.

--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pdfjs-dist": "^5.4.54",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-pdf": "^10.1.0",
-    "react-router-dom": "^7.7.1",
-    "react-zoom-pan-pinch": "^3.7.0"
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
